# spectral_method

./: .gitignore  CMakeLists.txt  README.md  main.cpp  visualize.ipynb
include/: path.h.in  spectral.hpp
src/: spectral.cpp
